add first input signin form

--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+
     <title>Responsive Form</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="forms-container">
+            <div class="signin-sigup">
+                <form action="" class="sign-in-form">
+                    <h2 class="title">Sign in</h2>
+                    <div class="input-field">
+                        <i class="fas fa-user"></i>
+                        <input type="text" placeholder="Username">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="panels-container">
+
+        </div>
+    </div>
 </body>
 <script src="./app.js"></script>
 </html>
