--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input type="text" placeholder="Password">
+                        <input type="password" placeholder="Password">
                     </div>
                     <input type="submit" value="login" class="btn solid">
                     <p class="social-text">Or Sign in with social plataforms</p>
