--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="container">
         <div class="forms-container">
             <div class="signin-sigup">
+                <!--    Sign in Form   -->
                 <form action="" class="sign-in-form">
                     <h2 class="title">Sign in</h2>
                     <div class="input-field">
@@ -38,7 +39,38 @@
                             <i class="fab fa-linkedin-in"></i>
                         </a>
                     </div>
-
+                </form>
+                <!--    Sign up Form   -->
+                <form action="" class="sign-up-form">
+                    <h2 class="title">Sign up</h2>
+                    <div class="input-field">
+                        <i class="fas fa-user"></i>
+                        <input type="text" placeholder="Username">
+                    </div>
+                    <div class="input-field">
+                        <i class="fas fa-envelope"></i>
+                        <input type="text" placeholder="Email">
+                    </div>
+                    <div class="input-field">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" placeholder="Password">
+                    </div>
+                    <input type="submit" value="Sign up" class="btn solid">
+                    <p class="social-text">Or Sign up with social plataforms</p>
+                    <div class="social-media">
+                        <a href="#" class="social-icon">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="#" class="social-icon">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="#" class="social-icon">
+                            <i class="fab fa-google"></i>
+                        </a>
+                        <a href="#" class="social-icon">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                    </div>
                 </form>
             </div>
         </div>
