--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="forms-container">
-            <div class="signin-sigup">
+            <div class="signin-signup">
                 <!--    Sign in Form   -->
                 <form action="" class="sign-in-form">
                     <h2 class="title">Sign in</h2>
@@ -74,8 +74,26 @@
                 </form>
             </div>
         </div>
+        <!--    Panel to change forms   -->
         <div class="panels-container">
-
+            <!--    Left panel to sign up   -->
+            <div class="panel left-panel">
+                <div class="content">
+                    <h3>New here ?</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste repudiandae debitis quasi perspiciatis consequatur voluptates enim pariatur repellendus voluptate beatae.</p>
+                    <button class="btn transparent" id="sign-up-btn">Sign up</button>
+                </div>
+                <img src="./rocketLaunch.png" class="image" alt="">
+            </div>
+            <!--    Right panel to sign in  -->
+            <div class="panel left-panel">
+                <div class="content">
+                    <h3>One us ?</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste repudiandae debitis quasi perspiciatis consequatur voluptates enim pariatur repellendus voluptate beatae.</p>
+                    <button class="btn transparent" id="sign-in-btn">Sign in</button>
+                </div>
+                <img src="./desk.png" class="image" alt="">
+            </div>
         </div>
     </div>
 </body>
