--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
             <div class="panel left-panel">
                 <div class="content">
                     <h3>New here ?</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste repudiandae debitis quasi perspiciatis consequatur voluptates enim pariatur repellendus voluptate beatae.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     <button class="btn transparent" id="sign-up-btn">Sign up</button>
                 </div>
-                <img src="./rocketLaunch.png" class="image" alt="">
+                <img src="./signup.svg" class="image" alt="">
             </div>
             <!--    Right panel to sign in  -->
             <div class="panel left-panel">
                 <div class="content">
                     <h3>One us ?</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste repudiandae debitis quasi perspiciatis consequatur voluptates enim pariatur repellendus voluptate beatae.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     <button class="btn transparent" id="sign-in-btn">Sign in</button>
                 </div>
-                <img src="./desk.png" class="image" alt="">
+                <img src="./signin.svg" class="image" alt="">
             </div>
         </div>
     </div>
