finishing all styles of html & fixing tags

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <img src="./signup.svg" class="image" alt="">
             </div>
             <!--    Right panel to sign in  -->
-            <div class="panel left-panel">
+            <div class="panel right-panel">
                 <div class="content">
                     <h3>One us ?</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
